fix generic